--- a/HW6/3/3.html
+++ b/HW6/3/3.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/3409f800ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="3.css">
 </head>
 <body>
@@ -31,7 +30,8 @@
             <button>Купить</button>
         </div>
     </div>
-    <div class="cart">Корзина</div>
+    <div class="basket">Корзина</div>
+    <div>Итого: <span class="sum"> 0</span> руб.</div>
     <script src="3.js"></script>
 </body>
 </html>
